[gd_scene load_steps=3 format=3 uid="uid://bb2hmt65nhdkg"]

[ext_resource type="Script" path="res://scripts/spinbox.gd" id="1_6s737"]
[ext_resource type="Script" path="res://scripts/scratch_ui.gd" id="1_j8l6a"]

[node name="ScratchUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8l6a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(750, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0

[node name="BeatSelector" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
text_overrun_behavior = 3
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "4 Beats/Measure"
popup/item_1/text = "3 Beats/Measure"
popup/item_1/id = 1
popup/item_2/text = "2 Beats/Measure"
popup/item_2/id = 2

[node name="TempoSpinBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_6s737")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TempoSpinBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
text = "120 bpm"
alignment = 1
editable = false
virtual_keyboard_type = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TempoSpinBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="ButtonUp" type="Button" parent="VBoxContainer/TempoSpinBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "^"

[node name="ButtonDown" type="Button" parent="VBoxContainer/TempoSpinBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "v"

[connection signal="value_changed" from="VBoxContainer/TempoSpinBox" to="." method="_on_tempo_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/TempoSpinBox/VBoxContainer/ButtonUp" to="VBoxContainer/TempoSpinBox" method="_on_button_up_pressed"]
[connection signal="pressed" from="VBoxContainer/TempoSpinBox/VBoxContainer/ButtonDown" to="VBoxContainer/TempoSpinBox" method="_on_button_down_pressed"]
